...
                            HStack {
                                Image(systemName: "magnifyingglass")
                                    .imageScale(.small)
                                    .foregroundColor(colorScheme == .dark ? .white : .black)
                                
                                TextField(NSLocalizedString("Search Destination", comment: ""), text: $destination)
                                    .accessibility(identifier: "searchDestinationTextField")
                                    .font(.subheadline)
                                    .foregroundColor(colorScheme == .dark ? .white : .black)
                                    .onChange(of: destination) { oldValue, newValue in
                                        DispatchQueue.main.asyncAfter(deadline: .now() + 0.5) {
                                            if newValue == destination {
                                                fetchDestinationSuggestions(for: newValue)
...
                                    }
                                    .pickerStyle(MenuPickerStyle())
                                    .accentColor(colorScheme == .dark ? .white : .black)
                                }
                            }
                        } else {
                            CollapsedPickerView(title: NSLocalizedString("Who", comment: ""), description: getGuestsDescription())
                        }
                    }
                    .modifier(CollapsibleDestinationViewModifier())
                    .onTapGesture {
                        withAnimation(.snappy) {
                            selectedOption = .guests
...
    }
    
    private func getDateDescription() -> String {
        if let start = startDate, let end = endDate {
            return "\(formatDate(start)) - \(formatDate(end))"
        } else {
            return "Seleziona le date"
        }
    }
    
    private func formatDate(_ date: Date) -> String {
        let formatter = DateFormatter()
        formatter.dateFormat = "d MMM"
...
        .background(colorScheme == .dark ? Color.gray.opacity(0.3) : Color.gray.opacity(0.1))
        .cornerRadius(10)
    }
}

#Preview {
    DestinationSearchView(
        searchParameters: .constant(SearchParameters(destination: "", placeID: "", startDate: Date(), endDate: Date(), numAdults: 2, numChildren: 0, childrenAges: [], filters: "")),  show: .constant(false), navigateToExplore: .constant(false)
    )
}

