...
    case 11: return ("dumbbell", "Centro fitness")
    case 12: return ("golf", "Campo da golf (entro 3 km)")
    case 14: return ("leaf", "Giardino")
    case 15: return ("sun.haze", "Terrazza")
    case 16: return ("nosign", "Camere non fumatori")
    case 17: return ("airplane", "Navetta aeroportuale")
    case 19: return ("fish", "Pesca")
    case 20: return ("briefcase", "Centro business")
    case 21: return ("figure.child", "Servizio di babysitting/assistenza bambini")
    case 22: return ("washer", "Lavanderia")
    case 23: return ("dryer", "Lavaggio a secco")
    case 24: return ("croissant", "Colazione continentale")
    case 25: return ("figure.roll", "Strutture per ospiti disabili")
    case 26: return ("snow", "Sci")
    case 27: return ("scissors", "Barbiere/salone di bellezza")
    case 28: return ("house", "Camere familiari")
    case 29: return ("gamecontroller", "Sala giochi")
    case 30: return ("dollarsign.circle", "Casinò")
    case 43: return ("bed.double", "Colazione in camera")
    case 44: return ("iron", "Servizio stireria")
    case 47: return ("network", "Servizi internet")
    case 48: return ("arrow.up.arrow.down", "Ascensore")
...
