...
            Image(systemName: "magnifyingglass")
            
            VStack(alignment: .leading, spacing: 2) {
                Text(NSLocalizedString("Where?", comment: ""))
                    .font(.footnote)
                    .fontWeight(.semibold)
                Text(NSLocalizedString("Everywhere - Always - Guests", comment: ""))
                    .font(.caption2)
                    .foregroundStyle(.gray)
            }
            
            Spacer()
            if(showFilterAndFavorite){
...
